--- a/templates/login.html
+++ b/templates/login.html
@@ -278,7 +278,7 @@
             </form>
 
             <div class="continue-link">
-                <a href="/">Continue without account →</a>
+                <a href="/">Continue without account</a>
             </div>
         </div>
     </div>
